# Leaf

./: .gitignore  LICENSE  README.md  index.html  layout-preview.html  package-lock.json  package.json
.github/workflows/: publish.yml
.workbuddy/memory/: 2026-07-16.md
src/: App.vue  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  inliner.rs  lib.rs  library.rs  main.rs  parser.rs  vault.rs
src-tauri/src/plugins/: mac_rounded_corners.rs  mod.rs
src/api/: client.ts
src/components/: ConfirmDialog.vue  ConflictDialog.vue  ContextMenu.vue  DocumentListItem.vue  FolderPickerDialog.vue  FolderTree.vue  TocPanel.vue  VaultSetup.vue
src/stores/: documents.ts
src/types/: document.ts
src/utils/: format.ts  html.ts
