[package]
name = "leaf"
version = "0.1.1"
description = "基于 Tauri 的本地 HTML 文档阅读库"
authors = ["pf711-dev"]
license = "Apache-2.0"
repository = "https://github.com/pf711-dev/leaf"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "leaf_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
scraper = "0.20"
uuid = { version = "1", features = ["v4", "serde"] }
directories = "5"
chrono = { version = "0.4", features = ["serde"] }

# macOS 圆角窗口插件依赖
cocoa = "0.26"
objc = "0.2"
tauri-plugin-clipboard-manager = "2.3.2"

